Added a few more sections

--- a/website.html
+++ b/website.html
@@ -7,76 +7,167 @@
       font-family: Arial;
       font-size: 90%;
     }
-    h2 {background-color: green;}
+    h2 {background-color: orange;}
     h3 {background-color: DeepSkyBlue;}
+    table, th, td {
+      border: 1px solid black;
+    }
+    th, td {
+      padding: 5px;
+    }
   </style>
 </head>
 
 <body>
+  <h1 style = "font-size:50px">The Tennis GOAT</h1>
+  <p>is named Roger Federer.</p>
+  <a href = "https://en.wikipedia.org/wiki/Roger_Federer" target = "_blank">
+    <img src = "federerWin.jpg" alt = "Federer wins Wimbledon" width = "320" height = "180" />
+  </a>
+  <p>He is a very good player.</p>
 
-<h1 style = "font-size:50px">The Tennis GOAT</h1>
-<p>is named Roger Federer.</p>
-<a href = "https://en.wikipedia.org/wiki/Roger_Federer" target = "_blank">
-<img src = "federerWin.jpg" alt = "Federer wins Wimbledon" width = "320" height = "180" />
-</a>
-<p>He is a very good player.</p>
+  <!-- Introduction -->
+  <h2>Information about Federer</h2>
+  <p>
+    <b>Birthday:</b> August 8, 1981 <br />
+    <b>Born:</b> Basel, Switzerland
+  </p>
 
-<!-- Introduction -->
-<h2>Information about Federer</h2>
-<p>
-<b>Birthday:</b> August 8, 1981 <br />
-<b>Born:</b> Basel, Switzerland
-</p>
+  <hr />
 
-<hr />
+  <h2>Reasons He's GOAT</h2>
+  <h3>What is a GOAT</h3>
+  <p>A <abbr title = "Greatest of All Time">GOAT</abbr> is a name for the greatest of all time</p>
 
-<h2>Reasons He's GOAT</h2>
-<h3>What is a GOAT</h3>
-<p>A <abbr title = "Greatest of All Time">GOAT</abbr> is a name for the greatest of all time</p>
+  <!-- Federer's Records -->
+  <h3>Grand slams</h3>
+  <p>He has won the most grand slams ever. Here is the ranking of the people with the most grand slams.</p>
+  <ol>
+    <li>Federer</li>
+    <li>Nadal</li>
+    <li>Djokovic</li>
+    <li>Sampras</li>
+    <li>Emerson</li>
+  </ol>
+  <h3>World No. 1 Rank</h3>
+  <p>He has held the world no. 1 rank for 310 weeks, the most ever.</p>
 
-<!-- Federer's Records -->
-<h3>Grand slams</h3>
-<p>He has won the most grand slams ever</p>
-<h3>World No. 1 Rank</h3>
-<p style = "font-family:courier;">He has held the world no. 1 rank for 310 weeks, the most ever</p>
-<h3>Other Records</h3>
-<p>Other records are found here
-  <a href = "https://en.wikipedia.org/wiki/List_of_career_achievements_by_Roger_Federer" target = "_blank">here</a>
-</p>
+  <h3>Other Records</h3>
+  <p>Here are some other notable records held by Federer</p>
+  <ul>
+    <li>31 Grand Slam finals</li>
+    <li>Won Wimbledon 8 times</li>
+    <li>237 consecutive weeks at World No. 1</li>
+    <li>Oldest player to be World No. 1</li>
+  </ul>
+  <p>Other records are found here
+    <a href = "https://en.wikipedia.org/wiki/List_of_career_achievements_by_Roger_Federer" target = "_blank">here</a>
+  </p>
 
-<!-- Federer's Age -->
-<h3>Longevitivity</h3>
+  <!-- Federer's Age -->
+  <h3>Longevitivity</h3>
 
-<p title = "Age">
-Currently, he is 39 years old, yet he is still one of the best players <br>
-in the tour. Despite <emph>claiming</emph> he's mortal, that's probably false. <br>
-Here's a quote from him: <q>I can't stay No. 1 for fifty years, you know. We'll see what happens.</q></p <br> <br>
-<p>Quote from <cite>BrainlyQuote</cite></p>
+  <p title = "Age">
+    Currently, he is 39 years old, yet he is still one of the best players <br />
+    in the tour. Despite <emph>claiming</emph> he's mortal, that's probably false. <br />
+    Here's a quote from him: <q>I can't stay No. 1 for fifty years, you know. We'll see what happens.</q>
+  </p>
+  <br /> <br />
+  <p>Quote from <cite>BrainlyQuote</cite></p>
 
-<hr>
+  <hr />
 
-<h1 style = "background-color:aquamarine;">Haiku About Him</h1>
+  <h1 style = "background-color:aquamarine;">Haiku About Him</h1>
 
-<pre style = "text-align:center">
-  Federer is good.
+  <pre style = "text-align:center">
+    Federer is good.
 
-  He's better than Djokovic
+    He's better than Djokovic
 
-  and Nadal as well.
-</pre>
+    and Nadal as well.
+  </pre>
 
-<!-- Random stuff to end the website -->
-<p><del>Djokovic</del>Federer is good</p>
+  <!-- Random stuff to end the website -->
+  <p><del>Djokovic</del>Federer is good</p>
 
-<small>This website is definitely unbiased</small> <br>
-<p>Information mostly from <cite>Wikipedia</cite> and things I made up</p>
-<address>
-  Written by Anonymous.<br>
-  Feel free to email us at <a href = "mailto:fakeemail@gmail.com">fakeemail.com</a><br>
-  Fake Address Lane, Los Angeles, CA<br>
-  USA
-</address>
+  <h2>World Rankings</h2>
+  <table style="width:25%">
+    <caption>"ATP World Tour Rankings"</caption>
+    <tr>
+      <th>Rank</th>
+      <th>Player</th>
+      <th>Points</th>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>Djokovic</td>
+      <td>10,220</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Nadal</td>
+      <td>9,850</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Thiem</td>
+      <td>7,045</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>Federer</td>
+      <td>6,630</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>Medvedev</td>
+      <td>5,890</td>
+    </tr>
+  </table>
+  <table style="width:25%">
+    <caption>Real Rankings</caption>
+    <tr>
+      <th>Rank</th>
+      <th>Player</th>
+      <th>Points</th>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>Federer</td>
+      <td>10,220</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Federer</td>
+      <td>9,850</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Federer</td>
+      <td>7,045</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>Federer</td>
+      <td>6,630</td>
+    </tr>
+    <tr>
+      <td>Everything past 5</td>
+      <td>Not Federer</td>
+      <td>0</td>
+    </tr>
+  </table>
 
-<h3 id = ""
+
+
+  <small>This website is definitely unbiased</small> <br />
+  <p>Information mostly from <cite>Wikipedia</cite> and things I made up</p>
+  <address>
+    Written by Anonymous.<br />
+    Feel free to email us at <a href = "mailto:fakeemail@gmail.com">fakeemail.com</a><br />
+    Fake Address Lane, Los Angeles, CA<br />
+    USA
+  </address>
+
 </body>
 </html>
