--- a/website.html
+++ b/website.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <h1 style = "font-size:50px">The Tennis GOAT</h1>
+  <h1 style = "font-size:50px" id = "top">The Tennis GOAT</h1>
   <p>is named Roger Federer.</p>
   <a href = "https://en.wikipedia.org/wiki/Roger_Federer" target = "_blank">
     <img src = "federerWin.jpg" alt = "Federer wins Wimbledon" width = "320" height = "180" />
@@ -168,6 +168,8 @@
     Fake Address Lane, Los Angeles, CA<br />
     USA
   </address>
+<br /> <br />
+  <a href = "#top">Go to top </a>
 
 </body>
 </html>
