--- a/website.html
+++ b/website.html
@@ -30,7 +30,8 @@
   <h2>Information about Federer</h2>
   <p>
     <b>Birthday:</b> August 8, 1981 <br />
-    <b>Born:</b> Basel, Switzerland
+    <b>Born:</b> Basel, Switzerland <br />
+    <b>Prize money won:</b> $130 million = &euro;110 million
   </p>
 
   <hr />
@@ -77,7 +78,9 @@
 
   <hr />
 
-  <h1 style = "background-color:aquamarine;">Haiku About Him</h1>
+  <h2>Miscellaneous</h2>
+
+  <h3>Haiku About Him</h3>
 
   <pre style = "text-align:center">
     Federer is good.
@@ -90,7 +93,7 @@
   <!-- Random stuff to end the website -->
   <p><del>Djokovic</del>Federer is good</p>
 
-  <h2>World Rankings</h2>
+  <h3>World Rankings</h3>
   <table style="width:25%">
     <caption>"ATP World Tour Rankings"</caption>
     <tr>
@@ -158,8 +161,15 @@
     </tr>
   </table>
 
+  <h3>Website</h3>
 
+  <p>
+    Here is his <a href = "https://rogerfederer.com/" target = "_blank">website</a>
+  </p>
 
+  <iframe src = "https://rogerfederer.com/" title = "Federer Website" height = "300" width = "700"> </iframe>
+
+  <br /> <br />
   <small>This website is definitely unbiased</small> <br />
   <p>Information mostly from <cite>Wikipedia</cite> and things I made up</p>
   <address>
