--- a/website.html
+++ b/website.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang = "en-US">
 <head>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!-- Popper JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
   <title>Tennis</title>
-  <style>
-    p {
-      font-family: Arial;
-      font-size: 90%;
-    }
-    h2 {background-color: orange;}
-    h3 {background-color: DeepSkyBlue;}
-    table, th, td {
-      border: 1px solid black;
-    }
-    th, td {
-      padding: 5px;
-    }
-  </style>
+  <link rel = "stylesheet" href = "styles.css" />
 </head>
 
 <body>
@@ -31,7 +30,7 @@
   <p>
     <b>Birthday:</b> August 8, 1981 <br />
     <b>Born:</b> Basel, Switzerland <br />
-    <b>Prize money won:</b> $130 million = &euro;110 million
+    <b>Prize money won:</b> $130 million = &#0128;110 million
   </p>
 
   <hr />
@@ -75,6 +74,64 @@
   </p>
   <br /> <br />
   <p>Quote from <cite>BrainlyQuote</cite></p>
+
+  <h3>Calendar Grand Slam</h3>
+
+  <p>
+    Only 8 players have completed the calendar grand slam, where they win all
+    four grand slams. Here is a slideshow of Federer's first win for each grand slam.
+  </p>
+
+
+
+  <div id="calendar" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#calendar" data-slide-to="0" class="active"></li>
+    <li data-target="#calendar" data-slide-to="1"></li>
+    <li data-target="#calendar" data-slide-to="2"></li>
+    <li data-target="#calendar" data-slide-to="3"></li>
+  </ul>
+
+  <!-- Slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="wimbledon.jpg" alt="Wimbledon win">
+      <div class="carousel-caption">
+        <h4 style = "color:black">Wimbledon</h4>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="australian.jpg" alt="Australian Open win">
+      <div class="carousel-caption">
+        <h4>Australian Open</h4>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="us.jpg" alt="US Open win">
+      <div class="carousel-caption">
+        <h4>US Open</h4>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="french.jpg" alt="French Open win">
+      <div class="carousel-caption">
+        <h4 style = "color:black">French Open</h4>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="carousel-control-prev" href="#calendar" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#calendar" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+
+</div>
+
 
   <hr />
 
@@ -178,7 +235,7 @@
     Fake Address Lane, Los Angeles, CA<br />
     USA
   </address>
-<br /> <br />
+  <br /> <br />
   <a href = "#top">Go to top </a>
 
 </body>
