added some boostrap elements

--- a/website.html
+++ b/website.html
@@ -14,7 +14,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <title>Tennis</title>
-  <link rel = "stylesheet" href = "styles.css" />
+  <!-- <link rel = "stylesheet" href = "styles.css" /> -->
 </head>
 
 <body>
@@ -222,7 +222,112 @@
   </p>
 
   <iframe src = "https://rogerfederer.com/" title = "Federer Website" height = "300" width = "700"> </iframe>
+  <br /> <br />
+  <div class = "jumbotron">
+    <div class = "container">
+      <div class = "display-3">Unbiased Tennis News</div>
+    </div>
+  </div>
 
+  <div class = "container">
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped" style="width:40%"></div>
+      <div class="progress-bar bg-success progress-bar-striped" style="width:30%"></div>
+    </div>
+    <div class = "display-4">ATP Race to London</div>
+    <div class = "row">
+      <div class = "col">1. Djokovic</div>
+      <div class = "col">6. Tsitsipas</div>
+    </div>
+    <div class = "row">
+      <div class = "col">2. Nadal</div>
+      <div class = "col">7. Zverev</div>
+    </div>
+    <div class = "row">
+      <div class = "col">3. Thiem</div>
+      <div class = "col">8. Berrettini</div>
+    </div>
+    <div class = "row">
+      <div class = "col">4. Federer</div>
+      <div class = "col">9. Monfils</div>
+    </div>
+    <div class = "row">
+      <div class = "col">5. Medvedev</div>
+      <div class = "col">10. Shapovalov</div>
+    </div>
+
+  <p>A very important aspect of those rankings is that Federer <mark>barely</mark>
+    played at all, yet is still 4th</p>
+
+  <p>Press <kbd>ALT + F4</kbd> to access more information about Federer.
+
+    <div class = "display-4">2006 Season</div>
+    <table class="table table-dark table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>Tournament</th>
+          <th>Result</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Australian Open</td>
+          <td>Won</td>
+        </tr>
+        <tr>
+          <td>French Open</td>
+          <td>Lost in Finals</td>
+        </tr>
+        <tr>
+          <td>Wimbledon</td>
+          <td>Won</td>
+        </tr>
+        <tr>
+          <td>US Open</td>
+          <td>Won</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <img src="trophy.jpg" class="rounded-circle mx-auto d-block" alt="Wimbledon Trophy" width = "30%">
+    <br />
+
+    <div class = "alert alert-danger alert-dismissable fade show">
+    <button type = "button" class = "close" data-dismiss = "alert">&times;</button>
+    <strong>Danger!</strong> You should <strong>never</strong> say Djokovic is better than Federer.
+    </div>
+
+    <button class = "btn btn-primary">
+      <span class = "spinner-border spinner-border-sm"></span>
+      Reasons why Djokovic is the GOAT
+    </button>
+
+    <br /> <br />
+    Federer makes tennis balls spin so here are some spinners.
+    <div class = "spinner-border text-danger"></div>
+    <div class = "spinner-grow text-primary"></div>
+    <div class = "spinner-grow spinner-grow-sm text-info"></div>
+    <div class = "spinner-border spinner-border-sm text-dark"></div>
+    <br /> <br />
+    Here are also some quality YouTube videos.
+    <div class="list-group">
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&feature=youtu.be"
+      class="list-group-item list-group-item-action">Quality Video 0</a>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&feature=youtu.be"
+      class="list-group-item list-group-item-action">Quality Video 1</a>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&feature=youtu.be"
+      class="list-group-item list-group-item-action disabled">Quality Video 2</a>
+    </div>
+
+    <br />
+    <div class="card">
+      <div class="card-header">Dear Roger,</div>
+      <div class="card-body">I made a website about you... this is supposed to
+      demonstrate a card and I want it to cover more than one line so that I
+    can see what happens... I think this is enough.</div>
+      <div class="card-footer">Eddie</div>
+    </div>
+  </div>
   <br /> <br />
   <small>This website is definitely unbiased</small> <br />
   <p>Information mostly from <cite>Wikipedia</cite> and things I made up</p>
