--- a/website.html
+++ b/website.html
@@ -15,6 +15,7 @@
 
   <title>Tennis</title>
   <!-- <link rel = "stylesheet" href = "styles.css" /> -->
+  <link rel = "stylesheet" href = "boostrapStyles.css" />
 </head>
 
 <body>
@@ -76,57 +77,6 @@
 
   <h3>Calendar Grand Slam</h3>
 
-  <p>
-    Only 8 players have completed the calendar grand slam, where they win all
-    four grand slams. Here is a slideshow of Federer's first win for each grand slam.
-  </p>
-
-  <!-- Carousel code -->
-  <div id = "calendar" class = "carousel slide" data-ride = "carousel">
-    <!-- Indicators -->
-    <ul class="carousel-indicators">
-      <li data-target="#calendar" data-slide-to="0" class="active"></li>
-      <li data-target="#calendar" data-slide-to="1"></li>
-      <li data-target="#calendar" data-slide-to="2"></li>
-      <li data-target="#calendar" data-slide-to="3"></li>
-    </ul>
-
-    <!-- Slideshow -->
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="wimbledon.jpg" alt="Wimbledon win">
-        <div class="carousel-caption">
-          <h4 style = "color:black">Wimbledon</h4>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="australian.jpg" alt="Australian Open win">
-        <div class="carousel-caption">
-          <h4>Australian Open</h4>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="us.jpg" alt="US Open win">
-        <div class="carousel-caption">
-          <h4>US Open</h4>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="french.jpg" alt="French Open win">
-        <div class="carousel-caption">
-          <h4 style = "color:black">French Open</h4>
-        </div>
-      </div>
-    </div>
-
-    <!-- Controls -->
-    <a class="carousel-control-prev" href="#calendar" data-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#calendar" data-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </a>
-  </div>
 
   <hr />
 
@@ -235,29 +185,46 @@
       <div class="progress-bar bg-success progress-bar-striped" style="width:30%"></div>
     </div>
     <div class = "display-4">ATP Race to London</div>
-    <div class = "row">
-      <div class = "col">1. Djokovic</div>
-      <div class = "col">6. Tsitsipas</div>
+    <p>Here are the top 12:</p>
+    <div class="row">
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Djokovic</div>
     </div>
-    <div class = "row">
-      <div class = "col">2. Nadal</div>
-      <div class = "col">7. Zverev</div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Nadal</div>
     </div>
-    <div class = "row">
-      <div class = "col">3. Thiem</div>
-      <div class = "col">8. Berrettini</div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Thiem</div>
     </div>
-    <div class = "row">
-      <div class = "col">4. Federer</div>
-      <div class = "col">9. Monfils</div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Federer</div>
     </div>
-    <div class = "row">
-      <div class = "col">5. Medvedev</div>
-      <div class = "col">10. Shapovalov</div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Medvedev</div>
     </div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Tsitsipas</div>
+    </div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Zverev</div>
+    </div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Berrettini</div>
+    </div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Monfils</div>
+    </div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Bautista Agut</div>
+    </div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Shapovalov</div>
+    </div>
+    <div class = "col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+      <div class="row">Rublev</div>
+    </div>
+  </div>
 
-  <p>A very important aspect of those rankings is that Federer <mark>barely</mark>
-    played at all, yet is still 4th</p>
 
   <p>Press <kbd>ALT + F4</kbd> to access more information about Federer.
 
@@ -327,6 +294,86 @@
     can see what happens... I think this is enough.</div>
       <div class="card-footer">Eddie</div>
     </div>
+
+    <p>
+      Only 8 players have completed the calendar grand slam, where they win all
+      four grand slams. Here is a slideshow of Federer's first win for each grand slam.
+    </p>
+
+    <!-- Carousel code -->
+    <div id = "calendar" class = "carousel slide" data-ride = "carousel">
+      <!-- Indicators -->
+      <ul class="carousel-indicators">
+        <li data-target="#calendar" data-slide-to="0" class="active"></li>
+        <li data-target="#calendar" data-slide-to="1"></li>
+        <li data-target="#calendar" data-slide-to="2"></li>
+        <li data-target="#calendar" data-slide-to="3"></li>
+      </ul>
+
+      <!-- Slideshow -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="wimbledon.jpg" alt="Wimbledon win">
+          <div class="carousel-caption">
+            <h4 style = "color:black">Wimbledon</h4>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="australian.jpg" alt="Australian Open win">
+          <div class="carousel-caption">
+            <h4>Australian Open</h4>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="us.jpg" alt="US Open win">
+          <div class="carousel-caption">
+            <h4>US Open</h4>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="french.jpg" alt="French Open win">
+          <div class="carousel-caption">
+            <h4 style = "color:black">French Open</h4>
+          </div>
+        </div>
+      </div>
+
+      <!-- Controls -->
+      <a class="carousel-control-prev" href="#calendar" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#calendar" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+
+    <p>To end this website, here's a quiz about what you learned.</p>
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown">Federer</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="https://www.youtube.com/watch?v=J8voIyM81zY">Video 1</a>
+          <a class="dropdown-item" href="https://www.youtube.com/watch?v=mnLoBs46lRg">Video 2</a>
+          <a class="dropdown-item" href="https://www.youtube.com/watch?v=hXBq28O84yo">Video 3</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown">Nadal</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&feature=youtu.be">Video 1</a>
+          <a class="dropdown-item" href="https://www.youtube.com/watch?v=6VaxpcnKtBA">Video 2</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Djokovic</a>
+      </li>
+    </ul>
+    <div class = "form-group">
+        <label for = "essay">Write an essay about what you learned:</label>
+        <textarea class = "form-control" rows = "6" id = "essay"></textarea>
+    </div>
+    <button type = "save" class = "btn btn-primary">Save</button>
+
   </div>
   <br /> <br />
   <small>This website is definitely unbiased</small> <br />
