Fixed small error

--- a/website.html
+++ b/website.html
@@ -347,7 +347,7 @@
       </a>
     </div>
 
-    <p>To end this website, here's a quiz about what you learned.</p>
+    <p>Here are some highlights for the best players:</p>
     <ul class="nav nav-pills">
       <li class="nav-item">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown">Federer</a>
